# doom

./: Cargo.toml  README.md
src/: context.rs  main.rs  renderer.rs  tick.rs  types.rs
src/context/: player.rs  pos3d.rs  rotation.rs  sector.rs  wall.rs
src/renderer/: clipping.rs  colour.rs  dist.rs  rendered_sector.rs
src/types/: pos2d.rs  pos3d.rs
